--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,7 +1,14 @@
 ---
-title: "Portfolio item number 2"
-excerpt: "Short description of portfolio item number 2 <br/><img src='/images/500x300.png'>"
+title: "Remote Sensing Project"
+excerpt: "Identifying wildfire burn-scars<br/><img src='/images/rs1.png'>"
 collection: portfolio
 ---
 
-This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
+Landsat 8 data were downloaded from the USGS Earth Explorer, and were processed and analysed using ENVI, ERDAS IMAGINE, and ArcMap.
+
+Wildfire burn-scars were identified, visualised, and quantified using Maximum Likelihood Classifier methods for Fort McMurray, Canada (above), and using the Change
+Normalised Burn Ratio for Paradise, California. The study compared the strengths and weaknesses of each of the methods used in each of the case studies, concluding that
+the Change Normalised Burn Ratio under-classified the identified burned area significantly in comparison to the Maximum Likelihood Classifier method; these findings were
+contrary to the conclusions of previous studies. 
+
+<img src='/images/rs1.png'>
