--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,6 +1,6 @@
 ---
 title: "Remote Sensing Project"
-excerpt: "Identifying wildfire burn-scars<br/><img src='/images/rs1.png'>"
+excerpt: "Identifying wildfire burn-scars<br/><img src='/images/rs1.PNG'>"
 collection: portfolio
 ---
 
@@ -11,4 +11,4 @@ Normalised Burn Ratio for Paradise, California. The study compared the strengths
 the Change Normalised Burn Ratio under-classified the identified burned area significantly in comparison to the Maximum Likelihood Classifier method; these findings were
 contrary to the conclusions of previous studies. 
 
-<img src='/images/rs1.png'>
+<img src='/images/rs1.PNG'>
